* 1.6.3     December 2015
    - Add sample systemd(8) unit file
    - Disable blacklisting by default
    - Fix `pfctl` command syntax with OpenBSD 5.8
    - Implement logging as wrappers around syslog(2)
    - Improve log and error messages
    - Match sendmail authentication failures
    - Remove SIGTSTP and SIGCONT handler
    - Remove safe_fgets() and exit on interrupt
    - Terminate state entries for hosts blocked with pf
    - Update and shorten command-line usage
    - Use 'configure' to set feature-test macros

* 1.6.2     October 2015
    - Make '-w' option backwards-compatible for iptables (James Harris)
    - Remove support for ip6fw and 'ipfw-range' option
    - Rewrite ipfw backend using command framework

* 1.6.1     July 2015
    - Accept "Received disconnect" with optional prefix
    - Add support for socklog entries
    - Fix 'ipfw-rules-range' option in configure script
    - Fix build for 'ipfw' and 'hosts' backends
    - Fix integer comparisons of different types
    - Match attacks when syslog debugging is enabled

* 1.6.0     May 2015
    - Add rules for Postfix SASL login attempts
    - Add support for ISO 8601 timestamps (David Caldwell)
    - Add support for external commands run on firewall events (-e)
    - Blacklist file is now human-readable (Armando Miraglia)
    - Check tcpwrapper file permissions regardless of local umask
    - Detect additional pre-auth disconnects
    - Fix ipfw crash when loading an empty blacklist (Jin Choi)
    - Fix log parsing on days beginning with zero
    - Fix log polling on filesystems with many files (Johann H. Hauschild)
    - Fix matching for Cyrus IMAP login via SASL
    - Fix syslog format detection on hosts with undefined hostname
    - Match SSH login failures with "via" suffix
    - Remove broken kqueue(2) support
    - Tweak option names and help strings
    - Update SSH "Bad protocol" signature
    - Use case-insensitive "invalid user" signature