@@ -6,6 +6,7 @@
     - Improve log and error messages
     - Match sendmail authentication failures
     - Remove SIGTSTP and SIGCONT handler
+    - Remove reverse mapping attack signature
     - Remove safe_fgets() and exit on interrupt
     - Terminate state entries for hosts blocked with pf
     - Update and shorten command-line usage
